--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway:wght@400;700&display=swap" rel="stylesheet">
   
   <title>Frontend Mentor | Fylo landing page with two column layout</title>
-  <link rel="stylesheet" href="../dist/output.css">
+  <link rel="stylesheet" href="./dist/output.css">
 </head>
 <body class="font-openSans">
   <header>
     <nav class="container flex justify-between pt-4 px-4 text-very-dark-blue lg:w-11/12 lg:mx-auto lg:px-0">
       <div>
-        <img src="../images/logo.svg" alt="logo" class="w-3/5 lg:w-4/5">
+        <img src="./images/logo.svg" alt="logo" class="w-3/5 lg:w-4/5">
       </div>
 
       <ul class="flex space-x-3 text-sm lg:text-lg">
@@ -29,7 +29,7 @@
 
     <section class="container w-11/12 mx-auto lg:grid lg:grid-cols-2 lg:place-items-center lg:justify-items-start lg:gap-x-10">
       <div class="mt-20 lg:col-start-2 lg:self-end">
-        <img src="../images/illustration-1.svg" alt="people with papers" class="w-4/5 mx-auto lg:w-10/12">
+        <img src="./images/illustration-1.svg" alt="people with papers" class="w-4/5 mx-auto lg:w-10/12">
       </div>
 
       <div class="text-center lg:col-start-1 lg:row-start-1 lg:row-end-2 lg:text-left">
@@ -51,7 +51,7 @@
   <main class=" bg-curve-mobile bg-center bg-cover bg-no-repeat lg:bg-curve-desktop">
     <section class=" container w-11/12 mx-auto mt-32 lg:grid lg:grid-cols-2 lg:gap-10">
       <div class="pt-20 lg:col-start-2 lg:self-center">
-        <img src="../images/illustration-2.svg" alt="people chating">
+        <img src="./images/illustration-2.svg" alt="people chating">
       </div>
 
       
@@ -63,10 +63,10 @@
           live collaboration. No email attachments required!</p>
         <div class="text-center flex items-center justify-center mt-4 pt-3 lg:justify-start">
           <a href="#" class="border-b-2 border-b-moderate-cyan  text-moderate-cyan font-raleway font-bold hover:opacity-75 transition">See how Fylo works </a>
-          <img src="../images/icon-arrow.svg" alt="arrow"> 
+          <img src="./images/icon-arrow.svg" alt="arrow"> 
         </div>
         <div class="bg-white rounded text-very-dark-blue px-5 pt-5 w-11/12 mx-auto lg:w-4/6 lg:m-0">
-          <img src="../images/icon-quotes.svg" alt="quotes">
+          <img src="./images/icon-quotes.svg" alt="quotes">
           <p class="pt-5 text-sm">Fylo has improved our team productivity by an order of magnitude. Since 
             making the switch our team has become a well-oiled collaboration machine.</p>
           <div class="flex mt-4">
@@ -94,13 +94,13 @@
   <footer class="bg-very-dark-blue h-screen">
     <div class="container w-11/12 mx-auto pt-10 text-light-grayish-blue lg:grid lg:grid-cols-4">
       <div class="space-y-4 lg:items-end">
-        <img src="../images/logo.svg" alt="logo" class="white-logo">
+        <img src="./images/logo.svg" alt="logo" class="white-logo">
         <div class="flex space-x-4 items-center mb-2 mt-5">
-          <img src="../images/icon-phone.svg" alt="phone">
+          <img src="./images/icon-phone.svg" alt="phone">
           <p>Phone: +1-543-123-4567</p>
         </div>
         <div class="flex space-x-4 items-center">
-          <img src="../images/icon-email.svg" alt="email">
+          <img src="./images/icon-email.svg" alt="email">
           <p>example@fylo.com</p>
         </div>
       </div>
