--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <p class="pt-5 text-sm">Fylo has improved our team productivity by an order of magnitude. Since 
             making the switch our team has become a well-oiled collaboration machine.</p>
           <div class="flex mt-4">
-            <img src="../images/avatar-testimonial.jpg" alt="avatar" class="rounded-full w-1/6">
+            <img src="./images/avatar-testimonial.jpg" alt="avatar" class="rounded-full w-1/6">
             <div class="ml-2">
               <h3 class="font-bold">Kyle Burton</h3>
               <p class="text-xs">Founder & CEO, Huddle</p>
